--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,33 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase-database.js"></script>
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
+  <!-- Firebase App is always required and must be first -->
+
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyBhFdgGJuxvBHHqVa8C2ZfBo75igHIsFMc",
+      authDomain: "poolare-7ef27.firebaseapp.com",
+      databaseURL: "https://poolare-7ef27.firebaseio.com",
+      projectId: "poolare-7ef27",
+      storageBucket: "poolare-7ef27.appspot.com",
+      messagingSenderId: "125095128278"
+    };
+    firebase.initializeApp(config);
+  </script>
+  <script>
+    var config = {
+      // ...
+    };
+    firebase.initializeApp(config);
+  </script>
 </head>
 <body>
   <app-root></app-root>
