Change router to module and add backend call for user

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angulartest</title>
+  <title>Poolare statistics</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,9 +10,6 @@
   <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase-database.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
   <!-- Firebase App is always required and must be first -->
 
@@ -25,12 +22,6 @@
       projectId: "poolare-7ef27",
       storageBucket: "poolare-7ef27.appspot.com",
       messagingSenderId: "125095128278"
-    };
-    firebase.initializeApp(config);
-  </script>
-  <script>
-    var config = {
-      // ...
     };
     firebase.initializeApp(config);
   </script>
